# fidius

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  mkdocs.yml  plissken.toml
crates/fidius/: Cargo.toml
crates/fidius-build/: Cargo.toml
crates/fidius-build/src/: lib.rs
crates/fidius-cli/: Cargo.toml
crates/fidius-cli/src/: commands.rs  main.rs  python_stub.rs
crates/fidius-cli/tests/: cli.rs  wasm_pack.rs
crates/fidius-core/: Cargo.toml
crates/fidius-core/src/: descriptor.rs  hash.rs  lib.rs  package.rs  value.rs
crates/fidius-core/tests/: layout_and_roundtrip.rs
crates/fidius-guest/: Cargo.toml
crates/fidius-guest/src/: client_stream.rs  descriptor.rs  error.rs  frame.rs  hash.rs  http.rs  lib.rs  python_descriptor.rs  sockets.rs  status.rs  stream_ffi.rs  stream_marker.rs  value.rs  wasm_descriptor.rs  wire.rs
crates/fidius-guest/tests/: proptest_wire.rs  wasi_http_pin.rs
crates/fidius-guest/wit/: world.wit
crates/fidius-host/: Cargo.toml  build.rs
crates/fidius-host/benches/: backends.rs
crates/fidius-host/fuzz/: .gitignore  Cargo.toml
crates/fidius-host/fuzz/fuzz_targets/: fid_extract.rs  frame_read.rs  manifest_validate.rs  wire_value.rs
crates/fidius-host/src/: arch.rs  arena.rs  client_stream.rs  error.rs  executor.rs  handle.rs  host.rs  lib.rs  loader.rs  package.rs  signing.rs  stream.rs  types.rs
crates/fidius-host/src/executor/: cdylib.rs  python.rs  wasm.rs
crates/fidius-host/tests/: cdylib_bidi_stream_e2e.rs  cdylib_client_stream_e2e.rs  cdylib_record_stream_item.rs  cdylib_streaming_e2e.rs  configured_cdylib_e2e.rs  configured_cdylib_stream_e2e.rs  configured_python_e2e.rs  configured_python_stream_e2e.rs  configured_wasm_e2e.rs  configured_wasm_stream_e2e.rs  e2e.rs  integration.rs  keyword_fields_wasm.rs  macro_egress_e2e.rs  macro_wasm.rs  macro_wasm_streaming.rs  multi_plugin_pipeline.rs  optional_methods_host.rs  package_e2e.rs  plugin_dep_graph.rs  python_bidi_stream_e2e.rs  python_client_stream_e2e.rs  python_plugin_e2e.rs  python_routing.rs  python_streaming_e2e.rs  records_stream_wasm.rs  records_wasm.rs  tcp_egress_e2e.rs  wasm_bidi_stream_e2e.rs  wasm_client_stream_e2e.rs  wasm_egress_e2e.rs  wasm_executor.rs  wasm_fs_e2e.rs  wasm_grants_e2e.rs  wasm_record_stream_item.rs  wasm_record_stream_user_types.rs  wasm_streaming_e2e.rs
crates/fidius-macro/: Cargo.toml
crates/fidius-macro/src/: impl_macro.rs  interface.rs  ir.rs  lib.rs  wit.rs
crates/fidius-macro/tests/: arena_basic.rs  async_plugin.rs  crate_path.rs  impl_basic.rs  interface_basic.rs  metadata.rs  multi_arg.rs  multi_plugin.rs  raw_wire.rs  smoke_cdylib.rs
crates/fidius-macro/tests/compile_fail/: bidi_stream_not_wired.rs  bidi_stream_not_wired.stderr  caller_allocated_removed.rs  caller_allocated_removed.stderr  duplicate_method_meta_key.rs  duplicate_method_meta_key.stderr  missing_version.stderr  mut_self.rs  mut_self.stderr  reserved_fidius_namespace.rs  reserved_fidius_namespace.stderr  stream_in_arg_position.rs  stream_in_arg_position.stderr
crates/fidius-python/: Cargo.toml  build.rs
crates/fidius-python/src/: error.rs  handle.rs  interpreter.rs  lib.rs  loader.rs  stream.rs  value_bridge.rs
crates/fidius-python/tests/: loader_e2e.rs  smoke.rs
crates/fidius-test/: Cargo.toml
crates/fidius-test/src/: dylib.rs  lib.rs  signing.rs  stream.rs
crates/fidius-test/tests/: smoke.rs
crates/fidius-wit/: Cargo.toml
crates/fidius-wit/src/: generate.rs  lib.rs
crates/fidius-wit/tests/: proptest_wit.rs
crates/fidius/src/: lib.rs
crates/fidius/tests/: facade_core.rs  facade_host.rs  facade_streaming.rs  facade_wasm.rs
examples/: Cargo.toml  README.md
examples/examples/: 01_load_and_call.rs  02_configure.rs  03_streaming.rs  04_pipeline.rs  05_record_stream.rs  06_bidi_transform.rs  07_client_streaming.rs
examples/src/: lib.rs
fides-cli/: Cargo.toml
fides-cli/src/: commands.rs  main.rs
fides-cli/tests/: cli.rs
fides-host/: Cargo.toml
fides-host/src/: error.rs  handle.rs  host.rs  loader.rs  signing.rs  types.rs
fides-host/tests/: e2e.rs  integration.rs
fides-macro/: Cargo.toml
fides-macro/src/: impl_macro.rs  interface.rs  ir.rs
fides-macro/tests/: async_plugin.rs  impl_basic.rs  interface_basic.rs  multi_plugin.rs  smoke_cdylib.rs
fides-macro/tests/compile_fail/: missing_version.rs  missing_version.stderr  mut_self.rs  mut_self.stderr  unsupported_buffer.rs
fidius/: Cargo.toml
fidius-cli/: Cargo.toml
fidius-cli/src/: commands.rs  main.rs
fidius-cli/tests/: cli.rs  full_pipeline.rs
fidius-core/: Cargo.toml
fidius-core/src/: async_runtime.rs  descriptor.rs  error.rs  hash.rs  lib.rs  package.rs  registry.rs  wire.rs
fidius-core/tests/: layout_and_roundtrip.rs
fidius-host/: Cargo.toml
fidius-host/src/: arch.rs  error.rs  handle.rs  host.rs  lib.rs  loader.rs  package.rs  signing.rs  types.rs
fidius-host/tests/: e2e.rs  integration.rs  package_e2e.rs
fidius-macro/: Cargo.toml
fidius-macro/src/: impl_macro.rs  interface.rs  ir.rs  lib.rs
fidius-macro/tests/: async_plugin.rs  impl_basic.rs  interface_basic.rs  multi_plugin.rs  smoke_cdylib.rs  trybuild.rs
fidius-macro/tests/compile_fail/: missing_version.rs  mut_self.rs  mut_self.stderr  unsupported_buffer.rs  unsupported_buffer.stderr
fidius/src/: lib.rs
python/fidius/: README.md  __init__.py  _errors.py  _registry.py  pyproject.toml
tests/test-plugin-smoke/: Cargo.toml  package.toml
tests/test-plugin-smoke/src/: lib.rs
tests/wasm-fixtures/bidi-stream/: Cargo.toml
tests/wasm-fixtures/bidi-stream/src/: lib.rs
tests/wasm-fixtures/client-stream/: Cargo.toml
tests/wasm-fixtures/client-stream/src/: lib.rs
tests/wasm-fixtures/fetcher/: Cargo.toml  build.sh
tests/wasm-fixtures/fetcher/src/: lib.rs
tests/wasm-fixtures/fetcher/wit/: world.wit
tests/wasm-fixtures/greeter/: Cargo.toml
tests/wasm-fixtures/greeter/src/: lib.rs
tests/wasm-fixtures/keyword-fields/: Cargo.toml  build.rs
tests/wasm-fixtures/macro-configured-fs/: Cargo.toml
tests/wasm-fixtures/macro-configured-stream/: Cargo.toml
(+657 files in other folders)
