[workspace]
members = [
    "fides-core",
    "fides-macro",
    "fides-host",
    "fides-cli",
    "fides",
]
exclude = ["tests/test-plugin-smoke"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
libloading = "0.8"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "2"
inventory = "0.3"
trybuild = "1"
ureq = "3"
