[workspace]
members = [
    "fidius-core",
    "fidius-macro",
    "fidius-host",
    "fidius-cli",
    "fidius",
]
exclude = ["tests/test-plugin-smoke"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
libloading = "0.8"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "2"
inventory = "0.3"
trybuild = "1"
toml = "0.8"
tracing = "0.1"
sha2 = "0.10"
ureq = "3"
tar = "0.4"
bzip2 = "0.5"
