[package]
name = "fides-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Fides plugin framework"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fides"
path = "src/main.rs"

[dependencies]
fides-core = { path = "../fides-core" }
fides-host = { path = "../fides-host" }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
