[package]
name = "fides-macro"
version = "0.1.0"
edition = "2021"
description = "Proc macros for the Fides plugin framework"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
fides-core = { path = "../fides-core" }
