[package]
name = "fidius-cli"
version = "0.0.4"
edition = "2021"
description = "CLI for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[[bin]]
name = "fidius"
path = "src/main.rs"

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.0.4" }
fidius-host = { path = "../fidius-host", version = "0.0.4" }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
