[package]
name = "fidius-core"
version = "0.1.0"
edition = "2021"
description = "Shared types for the Fidius plugin framework"
license = "MIT OR Apache-2.0"

[features]
async = ["tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true, optional = true }
