[package]
name = "fidius-host"
version = "0.0.0-alpha.1"
edition = "2021"
description = "Host-side loading and calling for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.0.0-alpha.1" }
libloading = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
serde = { workspace = true }
