[package]
name = "fidius-macro"
version = "0.0.0-alpha.1"
edition = "2021"
description = "Proc macros for the Fidius plugin framework"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
fidius-core = { path = "../fidius-core" }

[dev-dependencies]
fidius-core = { path = "../fidius-core", features = ["async"] }
tokio = { workspace = true }
trybuild = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true }
