[package]
name = "fidius"
version = "0.0.1"
edition = "2021"
description = "Fidius — a Rust plugin framework for trait-to-dylib plugin systems"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
async = ["fidius-core/async"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.0.1" }
fidius-macro = { path = "../fidius-macro", version = "0.0.1" }
