[package]
name = "fidius-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[[bin]]
name = "fidius"
path = "src/main.rs"

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.2.0" }
fidius-host = { path = "../fidius-host", version = "0.2.0" }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rand = "0.8"
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
fidius-test = { path = "../fidius-test", version = "0.2.0" }
