[package]
name = "fidius-cli"
version = "0.4.0"
edition = "2021"
description = "CLI for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[[bin]]
name = "fidius"
path = "src/main.rs"

[features]
# Pull wasmtime (via fidius-host) so `fidius pack` can validate + precompile
# wasm components. Default-off so the CLI stays thin for cdylib/Python users.
wasm = ["fidius-host/wasm"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.4.0" }
fidius-host = { path = "../fidius-host", version = "0.4.0" }
# WIT generation for `fidius wit` (shared with the build.rs helper).
fidius-wit = { path = "../fidius-wit", version = "0.4.0" }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rand = "0.8"
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
fidius-test = { path = "../fidius-test" }
