[package]
name = "fidius-core"
version = "0.2.1"
edition = "2021"
description = "Shared types for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
async = ["tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
bzip2 = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
