[package]
name = "fidius-guest"
version = "0.4.2"
edition = "2021"
description = "Guest-side, wasm-buildable shared types for the Fidius plugin framework — interface hashing, descriptors, the neutral Value model, and the bincode wire format. No host-only dependencies (no archive/compression/filesystem), so it compiles to wasm32-wasip2."
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

# wasm-only: backs the `http` module's brokered wasi:http client (FIDIUS-I-0028).
# Native (host) builds never pull this — the `http` module is cfg(wasm).
[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = "0.44"
