[package]
name = "fidius-host"
version = "0.2.1"
edition = "2021"
description = "Host-side loading and calling for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
tracing = ["dep:tracing"]
# Enable Python plugin support. Pulls in `fidius-python` (which embeds
# CPython via PyO3), the new `host.load_python(...)` API, and python
# packages in `discover()`. Default-off so cdylib-only consumers stay
# thin and don't link libpython.
python = ["dep:fidius-python"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.2.1" }
libloading = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, optional = true }
fidius-python = { path = "../fidius-python", version = "0.2.1", optional = true }

[build-dependencies]
# `resolve-config` gates `use_pyo3_cfgs`/`get`, which build.rs calls. Without
# it, the build script only compiles when another crate in the graph happens
# to unify the feature in — building this crate in isolation fails.
pyo3-build-config = { version = "0.25", features = ["resolve-config"] }

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
serde = { workspace = true }
# Serialize e2e signing tests — they all read/write the same `.sig` file next
# to the test-plugin-smoke dylib and race in parallel (FIDIUS-I-0020).
serial_test = "3"
# Test helpers (dylib_fixture, signing fixtures) — replaces copy-pasted
# build_test_plugin() across integration/e2e tests.
fidius-test = { path = "../fidius-test" }
# Dev-dep (rlib) on the test fixture so integration tests can use the
# generated CalculatorClient type. The fixture's subprocess cdylib build
# used by the tests is a separate cargo invocation and does NOT pull this
# feature.
test-plugin-smoke = { path = "../../tests/test-plugin-smoke", features = ["host"] }
