[package]
name = "fidius-host"
version = "0.5.5"
edition = "2021"
description = "Host-side loading and calling for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
tracing = ["dep:tracing"]
# Enable Python plugin support. Pulls in `fidius-python` (which embeds
# CPython via PyO3), the new `host.load_python(...)` API, and python
# packages in `discover()`. Default-off so cdylib-only consumers stay
# thin and don't link libpython.
python = ["dep:fidius-python"]
# Enable the sandboxed WASM component backend (FIDIUS-I-0021 Phase 2). Pulls in
# wasmtime and the `WasmComponentExecutor` / `host.load_wasm(...)` API. Default-off
# so cdylib/Python-only consumers don't link wasmtime.
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasmtime-wasi-http", "dep:http"]
# Server-streaming plugin calls (FIDIUS-I-0026): the async `StreamExecutor`
# seam + `ChunkStream` pull handle. Default-off and purely additive — unary
# cdylib/Python/WASM dispatch is unchanged whether or not this is enabled, so
# consumers that never stream don't pull in futures/async-trait/tokio.
streaming = ["dep:futures", "dep:async-trait", "dep:tokio"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.5.5" }
libloading = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "rt"], optional = true }
fidius-python = { path = "../fidius-python", version = "0.5.5", optional = true }
# Component Model runtime for the wasm backend. `component-model` + `cranelift`
# are on by default; we keep defaults for JIT + AOT (.cwasm) support.
wasmtime = { version = "45", optional = true }
# WASI host implementation. Std-built components import wasi:cli/io/clocks/filesystem
# even when unused, so the sandbox provides WASI with a zero-grant WasiCtx rather
# than an empty Linker (FIDIUS-T-0102 finding; capability allow-list in T-0104).
wasmtime-wasi = { version = "45", optional = true }
# Host-brokered outbound HTTP for sandboxed guests (FIDIUS-I-0027). Lockstep with
# wasmtime/wasmtime-wasi 45. Egress is enabled ONLY when the package declares the
# `http` capability AND the embedder supplies an `EgressPolicy` hook (fidius ships
# the mechanism, not the policy).
wasmtime-wasi-http = { version = "45", optional = true }
# The `http` crate types (Request/Parts/HeaderMap) in which the `EgressPolicy`
# seam is expressed, so no wasmtime types leak into fidius's public API. Must be
# the same major as wasmtime-wasi-http's.
http = { version = "1", optional = true }

[build-dependencies]
# `resolve-config` gates `use_pyo3_cfgs`/`get`, which build.rs calls. Without
# it, the build script only compiles when another crate in the graph happens
# to unify the feature in — building this crate in isolation fails.
pyo3-build-config = { version = "0.25", features = ["resolve-config"] }

[dev-dependencies]
tempfile = "3"
# `http::request::Parts` for the egress E2E's test EgressPolicy impls.
http = "1"
# Async test driver + combinators for the `streaming` feature tests.
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
# The macros, so the macro_wasm E2E can define an interface and use the
# macro-emitted WasmInterfaceDescriptor (FIDIUS-T-0106). crate = "fidius_core".
fidius-macro = { path = "../fidius-macro" }
# Serialize e2e signing tests — they all read/write the same `.sig` file next
# to the test-plugin-smoke dylib and race in parallel (FIDIUS-I-0020).
serial_test = "3"
# Test helpers (dylib_fixture, signing fixtures) — replaces copy-pasted
# build_test_plugin() across integration/e2e tests. `streaming` brings the
# composition harness (stream_of/collect/pump) for the streaming E2E.
fidius-test = { path = "../fidius-test", features = ["streaming"] }
async-trait = { workspace = true }
# Dev-dep (rlib) on the test fixture so integration tests can use the
# generated CalculatorClient type. The fixture's subprocess cdylib build
# used by the tests is a separate cargo invocation and does NOT pull this
# feature.
test-plugin-smoke = { path = "../../tests/test-plugin-smoke", features = ["host"] }
# Backend latency benchmark (FIDIUS-I-0024).
criterion = "0.5"

[[bench]]
name = "backends"
harness = false
required-features = ["wasm"]
