[package]
name = "fidius-macro"
version = "0.2.0"
edition = "2021"
description = "Proc macros for the Fidius plugin framework"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
fidius-core = { path = "../fidius-core", version = "0.2.0" }

[dev-dependencies]
fidius-core = { path = "../fidius-core", version = "0.2.0", features = ["async"] }
tokio = { workspace = true }
trybuild = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true }
