[package]
name = "fidius-python"
version = "0.1.0"
edition = "2021"
description = "Python plugin runtime for Fidius — embeds CPython via PyO3 and exposes a PluginHandle backed by a Python module."
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[dependencies]
# Intentionally NOT depending on `fidius-host` — that would create a cycle
# now that `fidius-host` optionally depends on us. The host plugs us in via
# its `python` feature; we stay layer-agnostic underneath.
fidius-core = { path = "../fidius-core" }
bincode = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.25"

[dev-dependencies]
tempfile = { workspace = true }
