[package]
name = "fidius-python"
version = "0.2.1"
edition = "2021"
description = "Python plugin runtime for Fidius — embeds CPython via PyO3 and exposes a PluginHandle backed by a Python module."
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[dependencies]
# Intentionally NOT depending on `fidius-host` — that would create a cycle
# now that `fidius-host` optionally depends on us. The host plugs us in via
# its `python` feature; we stay layer-agnostic underneath.
fidius-core = { path = "../fidius-core", version = "0.2.0" }
bincode = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[build-dependencies]
# `resolve-config` gates `use_pyo3_cfgs`/`get`, which build.rs calls. Today
# this compiles only because `pyo3` (a regular dep) transitively unifies the
# feature in; declare it explicitly so isolated builds keep working.
pyo3-build-config = { version = "0.25", features = ["resolve-config"] }

[dev-dependencies]
tempfile = { workspace = true }
