[package]
name = "fidius-test"
version = "0.2.1"
edition = "2021"
description = "Testing helpers for Fidius plugin authors and hosts"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.2.1" }
fidius-host = { path = "../fidius-host", version = "0.2.1" }
fidius-macro = { path = "../fidius-macro", version = "0.2.1" }
ed25519-dalek = { workspace = true }

[dev-dependencies]
# For the self-test: exercise helpers against the test-plugin-smoke fixture
test-plugin-smoke = { path = "../../tests/test-plugin-smoke", features = ["host"] }
tempfile = "3"
