[package]
name = "fidius-test"
version = "0.5.3"
edition = "2021"
description = "Testing helpers for Fidius plugin authors and hosts"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
# Streaming composition harness (`stream_of` / `collect` / `pump`) for testing
# server-streaming plugins. Pulls in the host's `streaming` feature. Off by
# default so the cdylib-only test helpers stay thin. NOT a semver-stable API
# (see ADR FIDIUS-A-0004).
streaming = ["fidius-host/streaming", "dep:futures", "dep:async-trait"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.5.3" }
fidius-host = { path = "../fidius-host", version = "0.5.3" }
fidius-macro = { path = "../fidius-macro", version = "0.5.3" }
ed25519-dalek = { workspace = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[dev-dependencies]
# For the self-test: exercise helpers against the test-plugin-smoke fixture
test-plugin-smoke = { path = "../../tests/test-plugin-smoke", features = ["host"] }
tempfile = "3"
# Async driver for the streaming-harness self-tests.
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
