[package]
name = "fidius"
version = "0.5.0"
edition = "2021"
description = "Fidius — a Rust plugin framework for trait-to-dylib plugin systems"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
async = ["fidius-core/async"]
# Opt-in host-side API surface. Enables re-export of fidius-host loader,
# handle, and error types. Interface crates that want a generated typed
# Client (for host consumers) should declare this feature.
host = ["dep:fidius-host"]
# Server-streaming support (FIDIUS-I-0026): re-exports `ChunkStream` and enables
# the generated Client's streaming methods + `PluginHandle::call_streaming`.
# Implies `host`. An interface crate with a `-> fidius::Stream<T>` method must
# enable this for host consumers.
streaming = ["host", "fidius-host/streaming"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.5.0" }
fidius-macro = { path = "../fidius-macro", version = "0.5.0" }
fidius-host = { path = "../fidius-host", version = "0.5.0", optional = true }
