[package]
name = "fidius"
version = "0.5.1"
edition = "2021"
description = "Fidius — a Rust plugin framework for trait-to-dylib plugin systems"
license = "Apache-2.0"
repository = "https://github.com/colliery-io/fidius"

[features]
async = ["fidius-core/async"]
# Opt-in host-side API surface. Enables re-export of fidius-host loader,
# handle, and error types. Interface crates that want a generated typed
# Client (for host consumers) should declare this feature.
host = ["dep:fidius-host"]
# Server-streaming support (FIDIUS-I-0026): re-exports `ChunkStream` and enables
# the generated Client's streaming methods + `PluginHandle::call_streaming`.
# Implies `host`. An interface crate with a `-> fidius::Stream<T>` method must
# enable this for host consumers.
streaming = ["host", "fidius-host/streaming"]
# Sandboxed WASM backend surface (FIDIUS-I-0021): enables `fidius-host`'s wasm
# executor and re-exports the WASM egress contract (`EgressPolicy`/`EgressDenied`)
# so host consumers can name them through the facade. Implies `host`.
wasm = ["host", "fidius-host/wasm"]

[dependencies]
fidius-core = { path = "../fidius-core", version = "0.5.1" }
fidius-macro = { path = "../fidius-macro", version = "0.5.1" }
fidius-host = { path = "../fidius-host", version = "0.5.1", optional = true }
