[package]
name = "test-plugin-smoke"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fidius = { path = "../../fidius", features = ["async"] }
fidius-core = { path = "../../fidius-core", features = ["async"] }
fidius-macro = { path = "../../fidius-macro" }
serde = { version = "1", features = ["derive"] }
