# fidius-fuzz — cargo-fuzz (libFuzzer) harness for fidius's untrusted-input
# boundaries (FIDIUS-I-0033 Phase 2). Standalone crate: its own `[workspace]`
# detaches it from the main workspace, and it builds only under the nightly
# toolchain via `cargo fuzz` (libFuzzer needs `-Z sanitizer`). Not part of the
# normal `cargo build`/`cargo test`.
[package]
name = "fidius-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# The crates whose untrusted decoders we exercise.
fidius-guest = { path = "../../fidius-guest" }
fidius-core = { path = "../../fidius-core" }
fidius-host = { path = ".." }
toml = "0.8"
tempfile = "3"

[[bin]]
name = "wire_value"
path = "fuzz_targets/wire_value.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame_read"
path = "fuzz_targets/frame_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_validate"
path = "fuzz_targets/manifest_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fid_extract"
path = "fuzz_targets/fid_extract.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace — the fuzz crate is nightly-only.
[workspace]
